--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <meta name="vviewport" content="width=device-width" />
     <title>Demo-site DWW2</title>
-    <link href="sstyles.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
   </head>
 
   <body>
